Fixed page overflow on mobile view

--- a/css/register.less
+++ b/css/register.less
@@ -2,6 +2,9 @@
 
 body {
   background-color: whitesmoke;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
 }
 
 .logo-container {
