--- a/css/settings.less
+++ b/css/settings.less
@@ -1,5 +1,11 @@
 @import "variables.less";
 
+body {
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+}
+
 .dialog-button {
   width: 10%;
   border: 1px solid black;
